Fix filter style for learner group members
Change to the input removed some styles here and truncated the
placeholder.

--- a/app/styles/newcomponents/learnergroup-user-manager.scss
+++ b/app/styles/newcomponents/learnergroup-user-manager.scss
@@ -8,7 +8,12 @@
 
   .actions {
     @include fill-parent;
+    @include ilios-input;
     text-align: right;
+
+    input {
+      width: 15em;
+    }
   }
 
   .learnergroup-user-manager-content {
